Color verde: Login de un independiente.

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -30,9 +30,9 @@
 <ul class="nav navbar-nav navbar-right" style="padding-right: 20px">
     {% if user.is_authenticated %}
 
-            <li><a href="{% url 'principal:editar' idTrabajador=user.id %}" id="id_editar"><span class="glyphicon glyphicon-user"></span> Editar</a></li>
-    <li>
-            <a href="logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
+        <li><a href="{% url 'principal:editar' idTrabajador=user.id %}" id="id_editar"><span class="glyphicon glyphicon-user"></span> Editar</a></li>
+        <li>
+            <a href="logout" id="id_login"><span class="glyphicon glyphicon-log-out"></span> <span>Logout</span></a>
         </li>
     {% else %}
         <li><a href="#" id="id_register"><span class="glyphicon glyphicon-user"></span> Registrarse</a></li>
@@ -97,6 +97,7 @@
     </div>
 {% endif %}
 {% include "polls/registro.html" %}
+{% include "polls/login.html" %}
 <!--suppress JSUnresolvedFunction -->
 <script>
     $(document).ready(function () {
@@ -105,6 +106,9 @@
         });
         $('#id_register').click(function () {
             $('#register_modal').modal();
+        });
+        $('#id_login').click(function () {
+            $('#login_modal').modal();
         });
 
         $('.trabajador').click(function () {
