--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -59,7 +59,7 @@
         <div class="input-group">
             <input  type="text" class="form-control" placeholder="Buscar" name="srch-term" id="buscar">
             <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                <button class="btn btn-default" type="submit" id="id_buscar"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div>
     </form>
@@ -120,10 +120,10 @@
             $('#success-alert').alert('close');
         });
 
-        $("#buscar").keyup(function(){
+        $("#buscar").keyup(function() {
             $('#trabajadores').clear;
             mostrarTrabajadores();
-});
+        });
     });
     function detalle(id){
             localStorage.setItem('trabajador', id);
